fixed some issues with tanggapan response submit & details

--- a/public/css/petugas.css
+++ b/public/css/petugas.css
@@ -15,3 +15,12 @@ tr {
     border-left: 6px solid rgba(160, 243, 146, 1); 
 }
 
+.details-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
